[tool.poetry]
name = "pu-learning"
version = "0.1.0"
description = ""
authors = ["Hirokazu Kiyomaru <h.kiyomaru@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^0.24.2"
jupyterlab = "^3.1.6"
plotly = "^5.1.0"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
